<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.gouv.esante.api.sign</groupId>
	<artifactId>esignsante-webservices</artifactId>
	<packaging>jar</packaging>
	<name>esignsante-webservices</name>
	<version>2.7.3-SNAPSHOT</version>
	<properties>
		<java.version>17</java.version>
		<esignsante-lib.version>2.5.1</esignsante-lib.version>
		<start-class>fr.gouv.esante.api.sign.ws.Application</start-class>
		<dist>docker</dist>
	</properties>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.5</version>
	</parent>
	<scm>
		<developerConnection>${developperConnectionJenkinsfile}</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<distributionManagement>
		<repository>
			<id>artifactory</id>
			<url>${distributionRepositoryJenkinsfile}</url>
		</repository>
	</distributionManagement>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/resources/${dist}</directory>
			</resource>
		</resources>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testResources>
			<testResource>
				<directory>src/test/resources/certificats</directory>
			</testResource>
			<testResource>
				<directory>src/test/resources/fichiers</directory>
			</testResource>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>*.properties</include>
					<include>*.sh</include>
					<include>*.json</include>
				</includes>
			</testResource>
		</testResources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.7.0.1746</version>
				</plugin>
				<plugin>
					<groupId>org.jboss.maven.plugins</groupId>
					<artifactId>bom-builder-maven-plugin</artifactId>
					<version>1.2.0</version>
					<executions>
						<execution>
							<id>build-bom</id>
							<goals>
								<goal>build-bom</goal>
							</goals>
							<configuration>
								<bomGroupId>fr.ans.api</bomGroupId>
								<bomArtifactId>esignsante-webservices</bomArtifactId>
								<bomVersion>1.0.0</bomVersion>
								<bomName>ESignSante BOM</bomName>
								<bomDescription>ESignSante BOM</bomDescription>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<header>licence-header.txt</header>
					<includes>
						<include>**/*.java</include>
						<include>**/*.properties</include>
					</includes>
					<strictCheck>true</strictCheck>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<executable>true</executable>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<executions>
					<execution>
						<configuration>
							<forkCount>1</forkCount>
							<reuseForks>false</reuseForks>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<delimiters>
						<delimiter>@</delimiter>
					</delimiters>
					<useDefaultDelimiters>false</useDefaultDelimiters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>7.0.1</version>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>
								${project.basedir}/src/main/resources/esignsante-ws.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<library>spring-boot</library>
							<ignoreFileOverride>
								${project.basedir}/.openapi-generator-ignore</ignoreFileOverride>
							<configOptions>
								<useJakartaEe>true</useJakartaEe>
								<basePackage>fr.gouv.esante.api.sign.ws</basePackage>
								<configPackage>fr.gouv.esante.api.sign.config</configPackage>
								<modelPackage>fr.gouv.esante.api.sign.ws.model</modelPackage>
								<apiPackage>fr.gouv.esante.api.sign.ws.api</apiPackage>
								<sourceFolder>src/main/java</sourceFolder>
								<dateLibrary>threetenbp</dateLibrary>
								<delegatePattern>true</delegatePattern>
								<useBeanValidation>true</useBeanValidation>
								<skipOverwrite>true</skipOverwrite>
								<disableHtmlEscaping>true</disableHtmlEscaping>
								<implicitHeaders>true</implicitHeaders>
								<requestMappingMode>none</requestMappingMode>
							</configOptions>
							<withXml>true</withXml>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors>
						<descriptor>src/main/assembly/install.xml</descriptor>
						<descriptor>src/main/assembly/directories.xml</descriptor>
					</descriptors>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.4.0</version>
				<configuration>
					<from>
						<image>${docker.registry}/openjdk:17-jdk-slim-buster</image>
					</from>
					<to>
						<image>${image.registry}/cybersante/esignsante</image>
						<tags>
							<tag>latest</tag>
							<tag>${project.version}</tag>
						</tags>
					</to>
					<container>
						<user>daemon:daemon</user>
						<mainClass>fr.gouv.esante.api.sign.ws.Application</mainClass>
						<args>
							<arg>--server.servlet.context-path=/esignsante/v1</arg>
						</args>
						<ports>
							<port>8080</port>
						</ports>
						<format>Docker</format>
						<!--this sacrifices reproducibility since the timestamp will change 
							with every build -->
						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
					</container>
					<allowInsecureRegistries>true</allowInsecureRegistries>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>fr.gouv.esante.api.sign</groupId>
			<artifactId>esignsante-lib</artifactId>
			<version>${esignsante-lib.version}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!--activate prometheus metrics for springboot app -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<exclusions>
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.el</groupId>
			<artifactId>jakarta.el-api</artifactId>
			<version>5.0.1</version>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<scope>provided</scope> <!-- provided: tomcat/lib/servlet-api.jar -->
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.2.0</version>
		</dependency>
		<!--<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-core-jakarta</artifactId>
			<version>2.2.7</version>
		</dependency>-->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>32.1.2-jre</version>
		</dependency>

		<!-- XML processing: Jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.joschi.jackson</groupId>
			<artifactId>jackson-datatype-threetenbp</artifactId>
			<version>2.6.4</version>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.6</version>
		</dependency>
		<dependency>
			<groupId>org.threeten</groupId>
			<artifactId>threetenbp</artifactId>
			<version>1.6.8</version>
		</dependency>
		<!-- Bean Validation API support -->
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.albfernandez</groupId>
			<artifactId>juniversalchardet</artifactId>
			<version>2.4.0</version>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>dev</id>
			<properties>
				<!--proxy BT (accès à artifactory par un tunnel ssh) -->
				<artifactory.hostname>
					http://repo.proxy-dev-forge.asip.hst.fluxus.net</artifactory.hostname>
				<ldap.server.url>ldap://annuaire.asipsante.fr</ldap.server.url>
				<docker.registry>registry.repo.proxy.prod.forge.esante.gouv.fr</docker.registry>
				<image.registry>registry.repo.proxy.prod.forge.esante.gouv.fr</image.registry>
			</properties>
			<distributionManagement>
				<repository>
					<id>github-ans</id>
					<name>GitHub ansforge Apache Maven Packages</name>
					<url>https://maven.pkg.github.com/ansforge/esignsante</url>
				</repository>
			</distributionManagement>
		</profile>
		<profile>
			<id>ext</id>
			<properties>
				<!--réseaux externes (VPN...) -->
				<artifactory.hostname>${ext.artifactory.hostname}</artifactory.hostname>
				<ldap.server.url>ldap://annuaire.asipsante.fr</ldap.server.url>
				<docker.registry>ext.docker.registry</docker.registry>
				<image.registry>ext.image.registry</image.registry>
			</properties>
		</profile>
		<profile>
			<activation>
				<os>
					<family>Linux</family>
				</os>
			</activation>
			<id>jenkins</id>
			<properties>
				<artifactory.username>jenkins</artifactory.username>
				<artifactory.password>password</artifactory.password>
				<artifactory.hostname>http://st-forge.asipsante.fr:8081</artifactory.hostname>
				<ldap.server.url>ldap://annuaire-igc.esante.gouv.fr:389</ldap.server.url>
				<docker.registry>registry.repo.proxy.prod.forge.esante.gouv.fr</docker.registry>
				<image.registry>registry.repo.proxy.prod.forge.esante.gouv.fr</image.registry>
			</properties>
			<distributionManagement>
				<repository>
					<id>artifactory</id>
					<url>${artifactory.hostname}/artifactory/asip-releases</url>
				</repository>
				<snapshotRepository>
					<id>artifactory</id>
					<url>${artifactory.hostname}/artifactory/asip-snapshots</url>
				</snapshotRepository>
			</distributionManagement>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>build-helper-maven-plugin</artifactId>
						<version>1.8</version>
						<executions>
							<execution>
								<id>parse-version</id>
								<goals>
									<goal>parse-version</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<version>3.0.0-M1</version>
						<configuration>
							<checkModificationExcludes>
								<checkModificationExclude>pom.xml</checkModificationExclude>
								<checkModificationExclude>pom.xml.versionsBackup</checkModificationExclude>
							</checkModificationExcludes>
							<tagBase>
								http://scm-forge.asipsante.fr:18080/svn/esignsante/esignsante-ws/applicatif/tags</tagBase>
							<tagNameFormat>
								@{project.artifactId}-@{project.version}</tagNameFormat>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.glassfish.jaxb</groupId>
				<artifactId>jaxb-runtime</artifactId>
				<version>2.3.8</version>
			</dependency>
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>2.3.3</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
